@@ -1,3 +1,11 @@
+2010-11-13  Colin Watson  <cjwatson@debian.org>
+
+	* dbus/com.ubuntu.Upstart.Instance.xml (GoalChanged): New signal.
+	* init/job.c (job_change_goal): Emit GoalChanged signal after
+	changing state.
+	* init/tests/test_job.c (test_change_goal): Test for this.
+	* NEWS: Update.
+
 2010-11-10  Colin Watson  <cjwatson@ubuntu.com>
 
 	* dbus/com.ubuntu.Upstart.Instance.xml (StateChanged, Failed): New
